--- a/theme/src/styles.css
+++ b/theme/src/styles.css
@@ -80,3 +80,20 @@ button {
   margin: 0;
   padding: 0;
 }
+
+.track__nav {
+  display: flex;
+  width: 100vw;
+  flex-direction: row;
+}
+
+.track__link {
+  padding: 0.5rem;
+  padding-left: 0;
+  margin-right: 1rem;
+  font-family: Helvetica, sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  color: black;
+  line-height: 1.2;
+}
